Minor corrections in Project 3 Added Project 4 contents

--- a/Project_3/src/styles.css
+++ b/Project_3/src/styles.css
@@ -111,6 +111,7 @@ body {
 #salesTable.table {
     border: 2px solid #d9edf7;
     border-collapse:inherit;
+    visibility: hidden;
 }
 
 .icon-flipped {
