Added page4.php 'buy' books functionality Moved login functionality from page2.php to page1.php

--- a/Project_4/src/style.css
+++ b/Project_4/src/style.css
@@ -47,6 +47,15 @@ body {
 	cursor: pointer;
 }
 
+.center-text{
+	text-align:center
+}
+
+/* Page1.php */
+#errorMessageDiv{
+	color: red;
+}
+
 /* Page2.php */
 
 #searchText{
@@ -158,12 +167,12 @@ body {
 	text-align: left;
 }
 
-#buyBtnDiv{
-	margin: auto;
-    width: 36%;
-    margin-top: 20px;
+#btnDiv{
+	float: right;
+	margin-top: 20px;
 }
-.buyButton {
+
+.actionButton {
 	display: inline-block;
 	color: #FFF;
     text-align: center;
